force-app/main/default/objects/RD_Cost__c/RD_Cost__c.object-meta.xml
<CustomObject>
    <label>RD Cost</label>
    <nameField>
        <label>RD Cost</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RD Cost</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>