force-app/main/default/objects/RD_Cost__c/fields/InsideCost__c.field-meta.xml
<CustomField>
    <fullName>InsideCost__c</fullName>
    <label>InsideCost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>