force-app/main/default/objects/RD_Cost__c/fields/MCD__c.field-meta.xml
<CustomField>
    <fullName>MCD__c</fullName>
    <label>MCD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>