force-app/main/default/objects/RD_Cost__c/fields/Outside_Cost__c.field-meta.xml
<CustomField>
    <fullName>Outside_Cost__c</fullName>
    <label>Outside Cost</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>