force-app/main/default/objects/RD_Cost__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>PTC__c</columns>
    <columns>SZC__c</columns>
    <columns>MCD__c</columns>
    <columns>Site__c</columns>
    <columns>QtyLL__c</columns>
    <columns>QtyUL__c</columns>
    <columns>InsideCost__c</columns>
    <columns>Outside_Cost__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>